<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reversi</string>
    <string name="action_settings">Settings</string>
    <string name="title">Reversi</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="high_scores">High Scores</string>
    <string name="quit">Quit</string>
    <string name="rules">How to play</string>
    <string name="restart">Home</string>
    <string name="one_player">1 Player</string>
    <string name="black_score_">Score:</string>
    <string name="white_score_">&quot;Score: &quot;</string>
    <string name="two_player">2 Player</string>
    <string name="timed">Timed</string>
    <string name="not_timed">Not Timed</string>
    <string name="time">Time:\u0020</string>
    <string name="black_goes">Black always goes first. Players take turns. Each Player must play their counter in a square which will enclose their opponents counter(s) between the counter they have just laid and another of their own counters. </string>
    <string name="players">Choose number of players</string>
    <string name="black_score_icon">Black Score Icon</string>
    <string name="white_score_icon">White Score Icon</string>
    <string name="default_no_players">2</string>
    <string name="the_aim">The aim of Reversi is to end up with more counters of your colour on the board than your opponent.</string>
    <string name="any_count">Any opponents counters enclosed in this way will be flipped (converted from the opponent\'s to the player\'s counters.</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="show_poss">Show possible moves</string>
    <string name="choice_contact1">contactChoice1</string>
    <string name="showing_poss">showPossi</string>
    <string name="choice_contact2">contactChoice2</string>
    <string name="default_tiles">0</string>
    <string name="tiles">Tiles</string>
    <string name="if_one_player">If one player is unable to move, the game switches back to the players opponent. If no player is able to move the game is over and whoever has the most counters on the board wins the game.</string>
    <string name="action_how_to">How To Play</string>
    <string name="hs">HS</string>
    <string name="action_high_scores">Scores</string>
    <string name="default_timing">1</string>
    <string name="default_timer">false</string>
    <string name="timer">Timer On/Off</string>
    <string name="image_of_player">Image of player</string>

</resources>