<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkgrnd_col"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin" >

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/text_col_hd"
        android:textSize="@dimen/main_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/how_to_heading_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rules"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_col_hd" />

    <TextView
        android:id="@+id/rules_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/the_aim"
        android:textColor="@color/text_general" />

    <TextView
        android:id="@+id/rules_2_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_general" 
        android:text="@string/black_goes" />

    <TextView
        android:id="@+id/rules_3_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_general" 
        android:text="@string/any_count" />

    <TextView
        android:id="@+id/rules_4_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_general" 
        android:text="@string/if_one_player" />

</LinearLayout>