<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkgrnd_col"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_top_margin" >

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/text_col_hd"
        android:textSize="@dimen/main_title"
        android:textStyle="bold" />
    
    <ImageView
		android:id="@+id/player1_imageview"
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:layout_alignParentLeft="true"
		android:layout_alignTop="@+id/title_textview"
		android:contentDescription="@string/image_of_player"
		android:src="@drawable/ic_action_user" />
		
	<ImageView
		android:id="@+id/player2_imageview"
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@+id/title_textview"
		android:contentDescription="@string/image_of_player"
		android:src="@drawable/ic_action_user" />

    <GridView
        android:id="@+id/board_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_textview"
        android:layout_marginTop="10dp"
        android:background="@color/bkgrnd_col"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_general"
        android:padding="3dp"
        android:numColumns="8" 
        android:hapticFeedbackEnabled="true" >
    </GridView>

    <TextView
        android:id="@+id/time_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/black_score"
        android:layout_alignLeft="@+id/reset_button"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_general"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/blk_score_icon_imageview"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/board_gridview"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/black_score_icon"
        android:src="@drawable/blk_rnd_cnt_bk_glw" />

    <TextView
        android:id="@+id/black_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/blk_score_icon_imageview"
        android:layout_toLeftOf="@+id/blk_score_icon_imageview"
        android:text="@string/black_score_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_general" />

    <Button
        android:id="@+id/reset_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/board_gridview"
        android:layout_below="@+id/time_textview"
        android:text="@string/restart"
        android:textColor="@color/text_general" />

    <ImageView
        android:id="@+id/wht_score_icon_imageview"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/blk_score_icon_imageview"
        android:layout_alignTop="@+id/white_score"
        android:contentDescription="@string/white_score_icon"
        android:src="@drawable/wht_rnd_cnt_bk" />

    <TextView
        android:id="@+id/white_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/black_score"
        android:layout_alignTop="@+id/reset_button"
        android:gravity="right"
        android:text="@string/white_score_"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/player_two" />

</RelativeLayout>